[package]
name = "pkl-codegen"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Code generator for Apple Pkl to Rust (pkl-gen-rust)"

[[bin]]
name = "pkl-gen-rust"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
