[package]
name = "pklrust-codegen"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Code generator for Apple Pkl to Rust (pkl-gen-rust)"
readme = "../../README.md"

[[bin]]
name = "pkl-gen-rust"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
